--- a/week0/Zorodha.html
+++ b/week0/Zorodha.html
@@ -1,16 +1,28 @@
-<div>
-    <img width='150' src="logo.svg" >
-    <span>Sign up</span>
-    <span>About</span>
-    <span>Products</span>
-    <span>Pricing</span>
-    <span>Support</span>
+<div style="display: flex; justify-content: space-between ; padding-left:100px; padding-right:100px;
+ box-shadow:2px 2px 1px #eee" >
+    <img style="padding-top: 20px" width='120px' height="20px" src="logo.svg"  >
+    <div style="display: flex; ; color : #666 ; font-size:18px">
+        <div style="padding: 20px; cursor:pointer">Sign up</div>
+        <div style="padding: 20px; cursor:pointer">About</div>
+        <div style="padding: 20px; cursor:pointer">Products</div>
+        <div style="padding: 20px; cursor:pointer">Pricing</div>
+        <div style="padding: 20px; cursor:pointer">Support</div>
+    </div>
 </div>
-<br><br><br><br><br>
-<center >
-    <img src="landing.png" width="900px" height="400px">
-    <h1>Invest in Everything</h1>
-    <p>Online platform to invest in stocks, derivatives, mutual funds, and more</p>
-    <br>
-    <button>Sign up now</button>
-</center>
+
+<div style="display: flex; justify-content:center;">
+    <img style="padding-top: 80px;" src="landing.png" width="800px" height="300px" >
+    
+</div>
+<div  style="display: flex; justify-content:center;">
+    <h1 style="font-weight: 500; font-size:2.7rem ; color:#424242;">Invest in Everything</h1>
+</div>
+<div  style="display: flex; justify-content:center;">
+    <h2 style="font-weight: 400; font-size:20px;">Online platform to invest in stocks, derivatives, mutual funds, and more</h2>
+</div>
+
+<div style="display: flex; justify-content: center;">
+    <div style="background-color: #387ed1; color: white;
+     font-size:20px ; padding: 10px 20px ; border-radius: 5px ; cursor: pointer">Sign up now</div>
+</div>
+
