--- a/week1/Assignment1.html
+++ b/week1/Assignment1.html
@@ -1,3 +1,8 @@
+<!-- // 1. Create a counter in javascript(counts down from 30 to 10)
+// 2. Calculate the time it takes between a setTimeout call and the inner function actually running
+// 3. create a terminal clock {HH:MM:SS} -->
+
+
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -19,5 +24,7 @@
             }
             count--;
             }, 1000)
+
+
     </script>
     </html>
